--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ openai==0.27.2
 pandas==2.0.1
 deepface==0.0.79
 opencv-python==4.7.0.72
+skia-python==87.5
+ipython==8.13.2
+PyQt5==5.15.9
+PyOpenGL==3.1.6
+glfw==2.5.9
